--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("3|2|1|梅宝|I'm|涛涛|28|岁|生|日|快|乐|我|永|远|爱|你|#time");
+            S.UI.simulate("3|2|1|梅|宝|I'm|涛|28|岁|生|日|快|乐|祝|老|婆|大|人|天|天|开|心|俺|永|远|爱|你|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
@@ -582,8 +582,10 @@
     }());
     S.init();
 </script>
-<audio  autoplay="autoplay" src="http://www.170mv.com/kw/se-sycdn.kuwo.cn/resource/n1/22/20/2902191870.mp3" loop="loop" controls="controls">
-当前浏览器不支持音乐播放
-</audio>
+<div style="text-align: center">
+    <audio  autoplay="autoplay" src="http://www.170mv.com/kw/se-sycdn.kuwo.cn/resource/n1/22/20/2902191870.mp3" loop="loop" controls="controls">
+        当前浏览器不支持音乐播放
+    </audio>
+</div>
 </body>
 </html>
